setting up crud